--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,26 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Set up the Coveralls maven plugin in the build section of the project pom.xml -->
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>4.0.0</version>
+            </plugin>
+
+            <!-- Set up the Cobertura Maven plugin with XML report format in the build section of the project pom.xml -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>cobertura-maven-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <format>xml</format>
+                    <maxmem>256m</maxmem>
+                    <!-- aggregated reports for multi-module projects -->
+                    <aggregate>true</aggregate>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
