--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,28 @@
                     </execution>
                 </executions>
             </plugin>
+
+            <!-- Set up the Coveralls maven plugin in the build section of the project pom.xml -->
+            <plugin>
+                <groupId>org.eluder.coveralls</groupId>
+                <artifactId>coveralls-maven-plugin</artifactId>
+                <version>4.0.0</version>
+            </plugin>
+
+            <!-- Set up the JaCoCo Maven plugin in the build section of the project pom.xml -->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>0.7.5.201505241946</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 </project>
