--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 
     <properties>
         <storm.version>0.9.3</storm.version>
+        <flux.version>0.10.0</flux.version>
     </properties>
 
     <dependencies>
@@ -26,6 +27,11 @@
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
             <version>2.12.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.storm</groupId>
+            <artifactId>flux-core</artifactId>
+            <version>${flux.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.kafka</groupId>
