--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
+sudo: true
 language: java
-jdk:
-  - oraclejdk8
+addons:
+  apt:
+    packages:
+      - oracle-java8-set-default
+before_install:
+  - curl -O https://download.elastic.co/elasticsearch/release/org/elasticsearch/distribution/deb/elasticsearch/5.0.0-alpha5/elasticsearch-5.0.0-alpha5.deb && sudo dpkg -i --force-confnew elasticsearch-5.0.0-alpha5.deb && sudo service elasticsearch start
+before_script:
+  - sleep 15
+  - curl -v http://localhost:9200/
 after_success:
-  - mvn cobertura:cobertura coveralls:report
+  - mvn -DrepoToken=$COVERALLS_REPO_TOKEN cobertura:cobertura coveralls:report
