--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,7 @@
         <module>common</module>
         <module>default</module>
         <module>mean-example</module>
+        <module>overall-data</module>
         <module>thomas-kilmann-example</module>
     </modules>
 
