--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,18 @@
 sudo: true
 language: java
+services:
+  - docker
 addons:
   apt:
     packages:
       - oracle-java8-set-default
 before_install:
+  - docker run -p 9092:9092 -p 2181:2181 --env ADVERTISED_HOST=localhost --env ADVERTISED_PORT=9092 -d eucm/kzk:0.11.0.1
   - curl -O https://artifacts.elastic.co/downloads/elasticsearch/elasticsearch-5.6.2.deb && sudo dpkg -i --force-confnew elasticsearch-5.6.2.deb && sudo service elasticsearch start
 before_script:
   - sleep 15
   - curl -v http://localhost:9200/
+script:
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V -q
 after_success:
   - mvn -DrepoToken=$COVERALLS_REPO_TOKEN cobertura:cobertura coveralls:report
