--- a/glp-example/pom.xml
+++ b/glp-example/pom.xml
@@ -85,7 +85,7 @@
                     </descriptors>
                     <archive>
                         <manifest>
-                            <mainClass>es.eucm.rage.realtime.simple.Analysis</mainClass>
+                            <mainClass>es.eucm.rage.realtime.simple.PAnalysis</mainClass>
                         </manifest>
                     </archive>
                     <finalName>realtime</finalName>
