Added a helper to create the topologies' assemblies

--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,7 @@
     </dependencyManagement>
 
     <modules>
+        <module>build-helper</module>
         <module>common</module>
         <module>default</module>
         <module>mean-example</module>
