--- a/mean-example/pom.xml
+++ b/mean-example/pom.xml
@@ -37,6 +37,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <topology.mainClass>es.eucm.rage.realtime.simple.Analysis</topology.mainClass>
     </properties>
 
     <dependencies>
@@ -57,73 +58,25 @@
 
 
     <build>
+        <finalName>realtime</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
+                <artifactId>maven-shade-plugin</artifactId>
             </plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+			</plugin>
             <plugin>
+				<groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <descriptors>
-                        <descriptor>src/assembly/jar.xml</descriptor>
-                    </descriptors>
-                    <archive>
-                        <manifest>
-                            <mainClass>es.eucm.firstaidgame.realtime.example.Analysis</mainClass>
-                        </manifest>
-                    </archive>
-                    <finalName>realtime</finalName>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
             </plugin>
 
             <!-- Set up the LICENSE Header plugin -->
             <plugin>
                 <groupId>com.mycila</groupId>
                 <artifactId>license-maven-plugin</artifactId>
-                <version>3.0</version>
-                <configuration>
-                    <header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header>
-                    <properties>
-                        <project.inceptionYear>2016</project.inceptionYear>
-                        <owner>e-UCM</owner>
-                        <email>http://www.e-ucm.es/</email>
-                    </properties>
-                    <excludes>
-                        <exclude>**/README</exclude>
-                        <exclude>src/test/resources/**</exclude>
-                        <exclude>src/main/resources/**</exclude>
-                        <exclude>**/logs/**</exclude>
-                        <exclude>logs/**</exclude>
-                        <exclude>*.yaml</exclude>
-                        <exclude>*.yml</exclude>
-                    </excludes>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                        <configuration>
-                            <excludes>
-                            </excludes>
-                        </configuration>
-                    </execution>
-                </executions>
             </plugin>
 
             <!-- Java formatter -->
@@ -136,7 +89,6 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.7</version>
                 <configuration>
                     <outputDirectory>${basedir}/target</outputDirectory>
                     <format>xml</format>
@@ -150,13 +102,9 @@
             <plugin>
                 <groupId>org.eluder.coveralls</groupId>
                 <artifactId>coveralls-maven-plugin</artifactId>
-                <version>4.0.0</version>
-
                 <configuration>
                     <coberturaReports>
-                        <coberturaReport>
-                            ${basedir}/target/coverage.xml
-                        </coberturaReport>
+                        <coberturaReport>${basedir}/target/coverage.xml</coberturaReport>
                     </coberturaReports>
                     <sourceEncoding>UTF-8</sourceEncoding>
                     <serviceName>travis-ci</serviceName>
