Updating storm-kafka to storm-kafka-client

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -54,7 +54,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.storm</groupId>
-            <artifactId>storm-kafka</artifactId>
+            <artifactId>storm-kafka-client</artifactId>
         </dependency>
         <dependency>
             <groupId>com.google.code.gson</groupId>
