--- a/pom.xml
+++ b/pom.xml
@@ -31,8 +31,8 @@
 
     <properties>
         <storm.version>1.1.1</storm.version>
+        <kafka.version>0.10.0.1</kafka.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <topology.mainClass>es.eucm.rage.realtime.simple.Analysis</topology.mainClass>
     </properties>
     <pluginRepositories>
         <pluginRepository>
@@ -90,6 +90,11 @@
                         <artifactId>slf4j-log4j12</artifactId>
                     </exclusion>
                 </exclusions>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.storm</groupId>
+                <artifactId>storm-kafka-client</artifactId>
+                <version>${storm.version}</version>
             </dependency>
             <dependency>
                 <groupId>com.google.code.gson</groupId>
@@ -169,21 +174,27 @@
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-jar-plugin</artifactId>
-                    <configuration>
-                        <archive>
-                            <manifest>
-                                <mainClass>${topology.mainClass}</mainClass>
-                            </manifest>
-                        </archive>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-shade-plugin</artifactId>
                     <version>3.1.1</version>
                     <configuration>
-                      <!-- put your configurations here -->
+                        <createDependencyReducedPom>true</createDependencyReducedPom>
+                        <filters>
+                            <filter>
+                                <artifact>*:*</artifact>
+		                        <excludes>
+		                            <exclude>META-INF/*.SF</exclude>
+		                            <exclude>META-INF/*.sf</exclude>
+		                            <exclude>META-INF/*.DSA</exclude>
+		                            <exclude>META-INF/*.dsa</exclude>
+		                            <exclude>META-INF/*.RSA</exclude>
+		                            <exclude>META-INF/*.rsa</exclude>
+		                            <exclude>META-INF/*.EC</exclude>
+		                            <exclude>META-INF/*.ec</exclude>
+		                            <exclude>META-INF/MSFTSIG.SF</exclude>
+		                            <exclude>META-INF/MSFTSIG.RSA</exclude>
+		                        </excludes>
+		                	</filter>
+						</filters>
                     </configuration>
                     <executions>
                       <execution>
@@ -191,6 +202,16 @@
                         <goals>
                           <goal>shade</goal>
                         </goals>
+                        <configuration>
+                          <transformers>
+                            <transformer
+                                    implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
+                            <transformer
+                                    implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <mainClass>org.apache.storm.flux.Flux</mainClass>
+                            </transformer>
+                          </transformers>
+                        </configuration>
                       </execution>
                     </executions>
                 </plugin>
@@ -203,10 +224,6 @@
                             <descriptorRef>topology</descriptorRef>
                         </descriptorRefs>
                         <finalName>${artifactId}</finalName>
-                        <transformers>
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
-                            <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer" />
-                        </transformers>
                     </configuration>
                     <executions>
                         <execution>
@@ -323,6 +340,28 @@
                         <serviceName>travis-ci</serviceName>
                     </configuration>
                 </plugin>
+                <!-- This allows us to use `mvn exec:java` to run the topology in development -->
+	            <!-- https://mvnrepository.com/artifact/org.codehaus.mojo/exec-maven-plugin -->
+	            <plugin>
+	                <groupId>org.codehaus.mojo</groupId>
+	                <artifactId>exec-maven-plugin</artifactId>
+	                <version>1.5.0</version>
+	                <executions>
+	                    <execution>
+	                    <goals>
+	                    <goal>exec</goal>
+	                    </goals>
+	                    </execution>
+	                </executions>
+	                <configuration>
+	                    <executable>java</executable>
+	                    <includeProjectDependencies>true</includeProjectDependencies>
+	                    <includePluginDependencies>false</includePluginDependencies>
+	                    <classpathScope>compile</classpathScope>
+	                    <!-- Set mainClass as Flux, since we are using that -->
+	                    <mainClass>org.apache.storm.flux.Flux</mainClass>
+	                </configuration>
+	            </plugin>
             </plugins>
         </pluginManagement>
     </build>
